--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-slider",
+  "name": "@love-open-source/ember-slider",
   "version": "0.0.2",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
@@ -7,12 +7,14 @@
     "slider"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Venkatesh",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RVenkatesh/Ember-slider.git"
+  },
   "scripts": {
     "build": "ember build",
     "start": "ember server",
@@ -56,5 +58,10 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  }
+  },
+  "main": "index.js",
+  "bugs": {
+    "url": "https://github.com/RVenkatesh/Ember-slider/issues"
+  },
+  "homepage": "https://github.com/RVenkatesh/Ember-slider#readme"
 }
