Added demoURL to package.json

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://rvenkatesh.github.io/Ember-Slider/"
   },
   "main": "index.js",
   "bugs": {
