--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.1.0",
+    "ember-cli-update": "^0.27.3",
     "ember-code-snippet": "^2.2.1",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
