--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-hammertime": "^1.5.0"
   },
   "devDependencies": {
+    "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.1.0",
