--- a/.travis.yml
+++ b/.travis.yml
@@ -55,8 +55,9 @@ before_install:
   - gem install sass --version "=3.4.24"
   - gem install compass --version "=1.0.3"
   - npm config set spin false
-  - npm install -g npm@4
+  - npm install -g npm@6
   - npm --version
+  - npm install
 
 script:
   - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
