--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
+    "ember-cli-github-pages": "^0.2.2",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
