Fix travis.yml issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ jobs:
 
     - stage: "Additional Tests"
       name: "Floating Dependencies"
-      # install:
-      #   - rm -rf node_modules tmp dist
-      #   - npm install --no-package-lock
+      install:
+        - rm -rf node_modules tmp dist
+        - npm install --no-package-lock
       script:
         - npm test
 
