--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.13.0",
-    "ember-cli-compass-compiler": "^0.5.0",
     "ember-cli-htmlbars": "^4.2.0",
+    "ember-cli-sass": "^10.0.1",
     "ember-gestures": "^1.1.5",
-    "ember-hammertime": "^1.6.0"
+    "ember-hammertime": "^1.6.0",
+    "node-sass": "^4.13.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.1.0",
